--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,7 @@ test:
     - docker exec easynotes-test /bin/sh -c "apk add --no-cache curl"
     - docker exec easynotes-test curl http://easynotes:8080 -f
     # Aufräumen
+    - docker stop easynotes easynotes-db easynotes-test
     - docker rm easynotes easynotes-db easynotes-test
     - docker network rm net-easynotes
 
