Addes Accesstoken Reference

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   IMAGE_FILE: 'easynotes.tar'
   REGISTRY_PATH: '$CI_REGISTRY/m210-easy-notes/easy-notes' # Hier dein individueller Pfad eingeben von deinem Projekt.
   IMAGE_NAME: 'easynotes'
-  IMAGE_VERSION: '1.0.0'
+  IMAGE_VERSION: '1.0.0' # Hier Versionsnummer eingeben. Bitte analog der package.json Dateie damit die Versionsnummer konsistent sind.
 
 # Um Docker Befehle verwenden zu können müssen wir die GitLab-Pipeline-Umgebung konfigurieren.
 # Wir verwenden Docker als Pipeline und verwenden zusätzlich docker-in-docker (dind) als Service um Docker-Befehle auführen zu können.
@@ -85,7 +85,7 @@ updatecd:
     - git config --global user.email "coaching@tschan-its.ch"
     - git config --global user.name "Andi Tschan"
   variables:
-    CD_REPO: 'https://oauth2:${M210_CD_ACCESS_TOKEN}@gitlab.com/m210-easy-notes/easy-notes-cd.git'
+    CD_REPO: 'https://oauth2:${EASYNOTES_CD_ACCESS_TOKEN}@gitlab.com/m210-easy-notes/easy-notes-cd.git'
     CD_DEPLOY_FILE: 'easynotes-deployment.yml'
   script:
     - git clone $CD_REPO m210-cd-temp
