--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easy-notes",
-  "version": "1.0.1",
-  "description": "Easy-Notes erlaubt es einfache Notizen zu verwalten.",
+  "version": "1.0.2",
+  "description": "EasyNotes erlaubt es einfache Notizen zu verwalten.",
   "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc && copyfiles -u 1 src/views/**/* dist",
