--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "author": "Andi Tschan / Tschan ITS",
   "license": "CC-BY-SA-4.0",
   "dependencies": {
-    "@types/uuid": "^9.0.4",
+    "@types/mysql": "^2.15.26",
+    "@types/uuid": "^9.0.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mysql2": "^3.6.1",
+    "mysql": "^2.18.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
